Adjust spacing for sign-in to prevent line break

--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -119,7 +119,7 @@
   display: inline-block;
   white-space: nowrap;
   padding: 0.85rem;
-  padding: 0.75rem;
+  padding: 0.6rem;
   box-shadow: inset 0 0 0 1px #bbb;
 
   &:hover {
